# blender_chromium

./: README.md
build_files/cmake/: macros.cmake
source/blender/editors/space_armory/: ArmoryWrapper.cpp  ArmoryWrapper.h  CMakeLists.txt  CMakeListsLinux.txt  CMakeListsWin.txt  simple_app.cpp  simple_app.h  simple_handler.cpp  simple_handler.h  simple_handler_linux.cpp  simple_handler_mac.mm  simple_handler_win.cpp  space_armory.c
source/blender/editors/space_armory/cef/: README.txt  cef.txt
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/: Info.plist  cef.pak  cef_100_percent.pak  cef_200_percent.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/ar.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/bn.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/cs.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/da.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/de.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/el.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/en.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/en_GB.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/et.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/fa.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/ja.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/kn.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/ko.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/lv.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/ml.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/nb.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/pt_PT.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/ru.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/sk.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/ta.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/uk.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/vi.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/zh_CN.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/Chromium Embedded Framework.framework/Resources/zh_TW.lproj/: locale.pak
source/blender/editors/space_armory/cef/Frameworks/blender Helper.app/Contents/: Info.plist
source/blender/editors/space_armory/cef/Resources/: cef.pak
source/blender/editors/space_armory/cef/Resources/locales/: ko.pak  zh-CN.pak
source/blender/editors/space_armory/cef/include/: cef_pack_resources.h  cef_pack_strings.h  cef_version.h
source/blender/editors/space_armory/cef/include/internal/: cef_win.h
source/blender/editors/space_armory/cef/libcef_dll/base/: cef_logging.cc
source/blender/editors/space_armory/cef/libcef_dll/ctocpp/: print_settings_ctocpp.cc
source/blender/editors/space_armory/cef/libcef_dll/ctocpp/views/: display_ctocpp.cc
source/blender/editors/space_armory/cef/libcef_dll/wrapper/: cef_stream_resource_handler.cc
source/blender/editors/space_armory/cef/win32/: libcef.lib  placehere.txt
source/blender/editors/space_armory/cef_linux/: README.txt
source/blender/editors/space_armory/cef_linux/Release/: cefsimple  chrome-sandbox  placehere.txt
source/blender/editors/space_armory/cef_linux/include/: cef_pack_resources.h
source/blender/editors/space_armory/cef_mac/: README.txt
source/blender/editors/space_armory/cef_mac/Frameworks/Chromium Embedded Framework.framework/Resources/am.lproj/: locale.pak
source/blender/editors/space_armory/cef_mac/Frameworks/Chromium Embedded Framework.framework/Resources/bg.lproj/: locale.pak
source/blender/editors/space_armory/cef_mac/Frameworks/Chromium Embedded Framework.framework/Resources/ca.lproj/: locale.pak
source/blender/editors/space_armory/cef_mac/Frameworks/Chromium Embedded Framework.framework/Resources/es.lproj/: locale.pak
source/blender/editors/space_armory/cef_mac/Frameworks/Chromium Embedded Framework.framework/Resources/es_419.lproj/: locale.pak
source/blender/editors/space_armory/cef_mac/Frameworks/Chromium Embedded Framework.framework/Resources/fi.lproj/: locale.pak
source/blender/editors/space_armory/cef_mac/Frameworks/Chromium Embedded Framework.framework/Resources/fil.lproj/: locale.pak
source/blender/editors/space_armory/cef_win/: README.txt
source/blender/editors/space_armory/cef_win/include/: cef_version.h
source/blender/editors/space_armory/cef_win/libcef_dll/: CMakeLists.txt
source/blender/editors/space_armory/cef_win/libcef_dll/ctocpp/: browser_ctocpp.cc  post_data_ctocpp.cc  sslinfo_ctocpp.cc
source/blender/editors/space_armory/cef_win/libcef_dll/wrapper/: cef_resource_manager.cc
(+38 files in other folders)
