# ***** BEGIN GPL LICENSE BLOCK *****
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software Foundation,
# Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
#
# ***** END GPL LICENSE BLOCK *****

set(INC
	../include
	../../blenfont
	../../blenkernel
	../../blenlib
	../../gpu
	../../imbuf
	../../makesdna
	../../makesrna
	../../windowmanager
	../../../../intern/guardedalloc
	../../../../intern/glew-mx
	../../barmory
	./cef
)
 
set(INC_SYS
	${GLEW_INCLUDE_PATH}
)
 
set(SRC
	cef/include/base/cef_atomic_ref_count.h
	cef/include/base/cef_atomicops.h
	cef/include/base/cef_basictypes.h
	cef/include/base/cef_bind.h
	cef/include/base/cef_bind_helpers.h
	cef/include/base/cef_build.h
	cef/include/base/cef_callback.h
	cef/include/base/cef_callback_forward.h
	cef/include/base/cef_callback_helpers.h
	cef/include/base/cef_callback_list.h
	cef/include/base/cef_cancelable_callback.h
	cef/include/base/cef_lock.h
	cef/include/base/cef_logging.h
	cef/include/base/cef_macros.h
	cef/include/base/cef_move.h
	cef/include/base/cef_platform_thread.h
	cef/include/base/cef_ref_counted.h
	cef/include/base/cef_scoped_ptr.h
	cef/include/base/cef_string16.h
	cef/include/base/cef_template_util.h
	cef/include/base/cef_thread_checker.h
	cef/include/base/cef_thread_collision_warner.h
	cef/include/base/cef_trace_event.h
	cef/include/base/cef_tuple.h
	cef/include/base/cef_weak_ptr.h
	cef/include/base/internal/cef_atomicops_atomicword_compat.h
	cef/include/base/internal/cef_atomicops_mac.h
	cef/include/base/internal/cef_bind_internal.h
	cef/include/base/internal/cef_callback_internal.h
	cef/include/base/internal/cef_lock_impl.h
	cef/include/base/internal/cef_raw_scoped_refptr_mismatch_checker.h
	cef/include/base/internal/cef_thread_checker_impl.h
	cef/include/capi/cef_app_capi.h
	cef/include/capi/cef_auth_callback_capi.h
	cef/include/capi/cef_base_capi.h
	cef/include/capi/cef_browser_capi.h
	cef/include/capi/cef_browser_process_handler_capi.h
	cef/include/capi/cef_callback_capi.h
	cef/include/capi/cef_client_capi.h
	cef/include/capi/cef_command_line_capi.h
	cef/include/capi/cef_context_menu_handler_capi.h
	cef/include/capi/cef_cookie_capi.h
	cef/include/capi/cef_dialog_handler_capi.h
	cef/include/capi/cef_display_handler_capi.h
	cef/include/capi/cef_dom_capi.h
	cef/include/capi/cef_download_handler_capi.h
	cef/include/capi/cef_download_item_capi.h
	cef/include/capi/cef_drag_data_capi.h
	cef/include/capi/cef_drag_handler_capi.h
	cef/include/capi/cef_find_handler_capi.h
	cef/include/capi/cef_focus_handler_capi.h
	cef/include/capi/cef_frame_capi.h
	cef/include/capi/cef_geolocation_capi.h
	cef/include/capi/cef_geolocation_handler_capi.h
	cef/include/capi/cef_image_capi.h
	cef/include/capi/cef_jsdialog_handler_capi.h
	cef/include/capi/cef_keyboard_handler_capi.h
	cef/include/capi/cef_life_span_handler_capi.h
	cef/include/capi/cef_load_handler_capi.h
	cef/include/capi/cef_menu_model_capi.h
	cef/include/capi/cef_menu_model_delegate_capi.h
	cef/include/capi/cef_navigation_entry_capi.h
	cef/include/capi/cef_origin_whitelist_capi.h
	cef/include/capi/cef_parser_capi.h
	cef/include/capi/cef_path_util_capi.h
	cef/include/capi/cef_print_handler_capi.h
	cef/include/capi/cef_print_settings_capi.h
	cef/include/capi/cef_process_message_capi.h
	cef/include/capi/cef_process_util_capi.h
	cef/include/capi/cef_render_handler_capi.h
	cef/include/capi/cef_render_process_handler_capi.h
	cef/include/capi/cef_request_capi.h
	cef/include/capi/cef_request_context_capi.h
	cef/include/capi/cef_request_context_handler_capi.h
	cef/include/capi/cef_request_handler_capi.h
	cef/include/capi/cef_resource_bundle_capi.h
	cef/include/capi/cef_resource_bundle_handler_capi.h
	cef/include/capi/cef_resource_handler_capi.h
	cef/include/capi/cef_response_capi.h
	cef/include/capi/cef_response_filter_capi.h
	cef/include/capi/cef_scheme_capi.h
	cef/include/capi/cef_ssl_info_capi.h
	cef/include/capi/cef_stream_capi.h
	cef/include/capi/cef_string_visitor_capi.h
	cef/include/capi/cef_task_capi.h
	cef/include/capi/cef_trace_capi.h
	cef/include/capi/cef_urlrequest_capi.h
	cef/include/capi/cef_v8_capi.h
	cef/include/capi/cef_values_capi.h
	cef/include/capi/cef_web_plugin_capi.h
	cef/include/capi/cef_xml_reader_capi.h
	cef/include/capi/cef_zip_reader_capi.h
	cef/include/capi/views/cef_box_layout_capi.h
	cef/include/capi/views/cef_browser_view_capi.h
	cef/include/capi/views/cef_browser_view_delegate_capi.h
	cef/include/capi/views/cef_button_capi.h
	cef/include/capi/views/cef_button_delegate_capi.h
	cef/include/capi/views/cef_display_capi.h
	cef/include/capi/views/cef_fill_layout_capi.h
	cef/include/capi/views/cef_label_button_capi.h
	cef/include/capi/views/cef_layout_capi.h
	cef/include/capi/views/cef_menu_button_capi.h
	cef/include/capi/views/cef_menu_button_delegate_capi.h
	cef/include/capi/views/cef_panel_capi.h
	cef/include/capi/views/cef_panel_delegate_capi.h
	cef/include/capi/views/cef_scroll_view_capi.h
	cef/include/capi/views/cef_textfield_capi.h
	cef/include/capi/views/cef_textfield_delegate_capi.h
	cef/include/capi/views/cef_view_capi.h
	cef/include/capi/views/cef_view_delegate_capi.h
	cef/include/capi/views/cef_window_capi.h
	cef/include/capi/views/cef_window_delegate_capi.h
	cef/include/cef_app.h
	cef/include/cef_application_mac.h
	cef/include/cef_auth_callback.h
	cef/include/cef_base.h
	cef/include/cef_browser.h
	cef/include/cef_browser_process_handler.h
	cef/include/cef_callback.h
	cef/include/cef_client.h
	cef/include/cef_command_line.h
	cef/include/cef_context_menu_handler.h
	cef/include/cef_cookie.h
	cef/include/cef_dialog_handler.h
	cef/include/cef_display_handler.h
	cef/include/cef_dom.h
	cef/include/cef_download_handler.h
	cef/include/cef_download_item.h
	cef/include/cef_drag_data.h
	cef/include/cef_drag_handler.h
	cef/include/cef_find_handler.h
	cef/include/cef_focus_handler.h
	cef/include/cef_frame.h
	cef/include/cef_geolocation.h
	cef/include/cef_geolocation_handler.h
	cef/include/cef_image.h
	cef/include/cef_jsdialog_handler.h
	cef/include/cef_keyboard_handler.h
	cef/include/cef_life_span_handler.h
	cef/include/cef_load_handler.h
	cef/include/cef_menu_model.h
	cef/include/cef_menu_model_delegate.h
	cef/include/cef_navigation_entry.h
	cef/include/cef_origin_whitelist.h
	cef/include/cef_pack_resources.h
	cef/include/cef_pack_strings.h
	cef/include/cef_parser.h
	cef/include/cef_path_util.h
	cef/include/cef_print_handler.h
	cef/include/cef_print_settings.h
	cef/include/cef_process_message.h
	cef/include/cef_process_util.h
	cef/include/cef_render_handler.h
	cef/include/cef_render_process_handler.h
	cef/include/cef_request.h
	cef/include/cef_request_context.h
	cef/include/cef_request_context_handler.h
	cef/include/cef_request_handler.h
	cef/include/cef_resource_bundle.h
	cef/include/cef_resource_bundle_handler.h
	cef/include/cef_resource_handler.h
	cef/include/cef_response.h
	cef/include/cef_response_filter.h
	cef/include/cef_scheme.h
	cef/include/cef_ssl_info.h
	cef/include/cef_stream.h
	cef/include/cef_string_visitor.h
	cef/include/cef_task.h
	cef/include/cef_trace.h
	cef/include/cef_urlrequest.h
	cef/include/cef_v8.h
	cef/include/cef_values.h
	cef/include/cef_version.h
	cef/include/cef_web_plugin.h
	cef/include/cef_xml_reader.h
	cef/include/cef_zip_reader.h
	cef/include/internal/cef_export.h
	cef/include/internal/cef_logging_internal.h
	cef/include/internal/cef_mac.h
	cef/include/internal/cef_ptr.h
	cef/include/internal/cef_string.h
	cef/include/internal/cef_string_list.h
	cef/include/internal/cef_string_map.h
	cef/include/internal/cef_string_multimap.h
	cef/include/internal/cef_string_types.h
	cef/include/internal/cef_string_wrappers.h
	cef/include/internal/cef_thread_internal.h
	cef/include/internal/cef_time.h
	cef/include/internal/cef_trace_event_internal.h
	cef/include/internal/cef_types.h
	cef/include/internal/cef_types_mac.h
	cef/include/internal/cef_types_wrappers.h
	cef/include/views/cef_box_layout.h
	cef/include/views/cef_browser_view.h
	cef/include/views/cef_browser_view_delegate.h
	cef/include/views/cef_button.h
	cef/include/views/cef_button_delegate.h
	cef/include/views/cef_display.h
	cef/include/views/cef_fill_layout.h
	cef/include/views/cef_label_button.h
	cef/include/views/cef_layout.h
	cef/include/views/cef_menu_button.h
	cef/include/views/cef_menu_button_delegate.h
	cef/include/views/cef_panel.h
	cef/include/views/cef_panel_delegate.h
	cef/include/views/cef_scroll_view.h
	cef/include/views/cef_textfield.h
	cef/include/views/cef_textfield_delegate.h
	cef/include/views/cef_view.h
	cef/include/views/cef_view_delegate.h
	cef/include/views/cef_window.h
	cef/include/views/cef_window_delegate.h
	cef/include/wrapper/cef_byte_read_handler.h
	cef/include/wrapper/cef_closure_task.h
	cef/include/wrapper/cef_helpers.h
	cef/include/wrapper/cef_message_router.h
	cef/include/wrapper/cef_resource_manager.h
	cef/include/wrapper/cef_stream_resource_handler.h
	cef/include/wrapper/cef_xml_object.h
	cef/include/wrapper/cef_zip_archive.h

	cef/libcef_dll/base/cef_atomicops_x86_gcc.cc
	cef/libcef_dll/base/cef_bind_helpers.cc
	cef/libcef_dll/base/cef_callback_helpers.cc
	cef/libcef_dll/base/cef_callback_internal.cc
	cef/libcef_dll/base/cef_lock.cc
	cef/libcef_dll/base/cef_lock_impl.cc
	cef/libcef_dll/base/cef_logging.cc
	cef/libcef_dll/base/cef_ref_counted.cc
	cef/libcef_dll/base/cef_string16.cc
	cef/libcef_dll/base/cef_thread_checker_impl.cc
	cef/libcef_dll/base/cef_thread_collision_warner.cc
	cef/libcef_dll/base/cef_weak_ptr.cc
	cef/libcef_dll/CMakeLists.txt
	cef/libcef_dll/cpptoc/app_cpptoc.cc
	cef/libcef_dll/cpptoc/app_cpptoc.h
	cef/libcef_dll/cpptoc/base_cpptoc.cc
	cef/libcef_dll/cpptoc/base_cpptoc.h
	cef/libcef_dll/cpptoc/browser_process_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/browser_process_handler_cpptoc.h
	cef/libcef_dll/cpptoc/client_cpptoc.cc
	cef/libcef_dll/cpptoc/client_cpptoc.h
	cef/libcef_dll/cpptoc/completion_callback_cpptoc.cc
	cef/libcef_dll/cpptoc/completion_callback_cpptoc.h
	cef/libcef_dll/cpptoc/context_menu_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/context_menu_handler_cpptoc.h
	cef/libcef_dll/cpptoc/cookie_visitor_cpptoc.cc
	cef/libcef_dll/cpptoc/cookie_visitor_cpptoc.h
	cef/libcef_dll/cpptoc/cpptoc.h
	cef/libcef_dll/cpptoc/delete_cookies_callback_cpptoc.cc
	cef/libcef_dll/cpptoc/delete_cookies_callback_cpptoc.h
	cef/libcef_dll/cpptoc/dialog_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/dialog_handler_cpptoc.h
	cef/libcef_dll/cpptoc/display_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/display_handler_cpptoc.h
	cef/libcef_dll/cpptoc/domvisitor_cpptoc.cc
	cef/libcef_dll/cpptoc/domvisitor_cpptoc.h
	cef/libcef_dll/cpptoc/download_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/download_handler_cpptoc.h
	cef/libcef_dll/cpptoc/download_image_callback_cpptoc.cc
	cef/libcef_dll/cpptoc/download_image_callback_cpptoc.h
	cef/libcef_dll/cpptoc/drag_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/drag_handler_cpptoc.h
	cef/libcef_dll/cpptoc/end_tracing_callback_cpptoc.cc
	cef/libcef_dll/cpptoc/end_tracing_callback_cpptoc.h
	cef/libcef_dll/cpptoc/find_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/find_handler_cpptoc.h
	cef/libcef_dll/cpptoc/focus_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/focus_handler_cpptoc.h
	cef/libcef_dll/cpptoc/geolocation_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/geolocation_handler_cpptoc.h
	cef/libcef_dll/cpptoc/get_geolocation_callback_cpptoc.cc
	cef/libcef_dll/cpptoc/get_geolocation_callback_cpptoc.h
	cef/libcef_dll/cpptoc/jsdialog_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/jsdialog_handler_cpptoc.h
	cef/libcef_dll/cpptoc/keyboard_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/keyboard_handler_cpptoc.h
	cef/libcef_dll/cpptoc/life_span_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/life_span_handler_cpptoc.h
	cef/libcef_dll/cpptoc/load_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/load_handler_cpptoc.h
	cef/libcef_dll/cpptoc/menu_model_delegate_cpptoc.cc
	cef/libcef_dll/cpptoc/menu_model_delegate_cpptoc.h
	cef/libcef_dll/cpptoc/navigation_entry_visitor_cpptoc.cc
	cef/libcef_dll/cpptoc/navigation_entry_visitor_cpptoc.h
	cef/libcef_dll/cpptoc/pdf_print_callback_cpptoc.cc
	cef/libcef_dll/cpptoc/pdf_print_callback_cpptoc.h
	cef/libcef_dll/cpptoc/print_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/print_handler_cpptoc.h
	cef/libcef_dll/cpptoc/read_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/read_handler_cpptoc.h
	cef/libcef_dll/cpptoc/render_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/render_handler_cpptoc.h
	cef/libcef_dll/cpptoc/render_process_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/render_process_handler_cpptoc.h
	cef/libcef_dll/cpptoc/request_context_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/request_context_handler_cpptoc.h
	cef/libcef_dll/cpptoc/request_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/request_handler_cpptoc.h
	cef/libcef_dll/cpptoc/resolve_callback_cpptoc.cc
	cef/libcef_dll/cpptoc/resolve_callback_cpptoc.h
	cef/libcef_dll/cpptoc/resource_bundle_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/resource_bundle_handler_cpptoc.h
	cef/libcef_dll/cpptoc/resource_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/resource_handler_cpptoc.h
	cef/libcef_dll/cpptoc/response_filter_cpptoc.cc
	cef/libcef_dll/cpptoc/response_filter_cpptoc.h
	cef/libcef_dll/cpptoc/run_file_dialog_callback_cpptoc.cc
	cef/libcef_dll/cpptoc/run_file_dialog_callback_cpptoc.h
	cef/libcef_dll/cpptoc/scheme_handler_factory_cpptoc.cc
	cef/libcef_dll/cpptoc/scheme_handler_factory_cpptoc.h
	cef/libcef_dll/cpptoc/set_cookie_callback_cpptoc.cc
	cef/libcef_dll/cpptoc/set_cookie_callback_cpptoc.h
	cef/libcef_dll/cpptoc/string_visitor_cpptoc.cc
	cef/libcef_dll/cpptoc/string_visitor_cpptoc.h
	cef/libcef_dll/cpptoc/task_cpptoc.cc
	cef/libcef_dll/cpptoc/task_cpptoc.h
	cef/libcef_dll/cpptoc/urlrequest_client_cpptoc.cc
	cef/libcef_dll/cpptoc/urlrequest_client_cpptoc.h
	cef/libcef_dll/cpptoc/v8accessor_cpptoc.cc
	cef/libcef_dll/cpptoc/v8accessor_cpptoc.h
	cef/libcef_dll/cpptoc/v8handler_cpptoc.cc
	cef/libcef_dll/cpptoc/v8handler_cpptoc.h
	cef/libcef_dll/cpptoc/views/browser_view_delegate_cpptoc.cc
	cef/libcef_dll/cpptoc/views/browser_view_delegate_cpptoc.h
	cef/libcef_dll/cpptoc/views/button_delegate_cpptoc.cc
	cef/libcef_dll/cpptoc/views/button_delegate_cpptoc.h
	cef/libcef_dll/cpptoc/views/menu_button_delegate_cpptoc.cc
	cef/libcef_dll/cpptoc/views/menu_button_delegate_cpptoc.h
	cef/libcef_dll/cpptoc/views/panel_delegate_cpptoc.cc
	cef/libcef_dll/cpptoc/views/panel_delegate_cpptoc.h
	cef/libcef_dll/cpptoc/views/textfield_delegate_cpptoc.cc
	cef/libcef_dll/cpptoc/views/textfield_delegate_cpptoc.h
	cef/libcef_dll/cpptoc/views/view_delegate_cpptoc.cc
	cef/libcef_dll/cpptoc/views/view_delegate_cpptoc.h
	cef/libcef_dll/cpptoc/views/window_delegate_cpptoc.cc
	cef/libcef_dll/cpptoc/views/window_delegate_cpptoc.h
	cef/libcef_dll/cpptoc/web_plugin_info_visitor_cpptoc.cc
	cef/libcef_dll/cpptoc/web_plugin_info_visitor_cpptoc.h
	cef/libcef_dll/cpptoc/web_plugin_unstable_callback_cpptoc.cc
	cef/libcef_dll/cpptoc/web_plugin_unstable_callback_cpptoc.h
	cef/libcef_dll/cpptoc/write_handler_cpptoc.cc
	cef/libcef_dll/cpptoc/write_handler_cpptoc.h
	cef/libcef_dll/ctocpp/auth_callback_ctocpp.cc
	cef/libcef_dll/ctocpp/auth_callback_ctocpp.h
	cef/libcef_dll/ctocpp/before_download_callback_ctocpp.cc
	cef/libcef_dll/ctocpp/before_download_callback_ctocpp.h
	cef/libcef_dll/ctocpp/binary_value_ctocpp.cc
	cef/libcef_dll/ctocpp/binary_value_ctocpp.h
	cef/libcef_dll/ctocpp/browser_ctocpp.cc
	cef/libcef_dll/ctocpp/browser_ctocpp.h
	cef/libcef_dll/ctocpp/browser_host_ctocpp.cc
	cef/libcef_dll/ctocpp/browser_host_ctocpp.h
	cef/libcef_dll/ctocpp/callback_ctocpp.cc
	cef/libcef_dll/ctocpp/callback_ctocpp.h
	cef/libcef_dll/ctocpp/command_line_ctocpp.cc
	cef/libcef_dll/ctocpp/command_line_ctocpp.h
	cef/libcef_dll/ctocpp/context_menu_params_ctocpp.cc
	cef/libcef_dll/ctocpp/context_menu_params_ctocpp.h
	cef/libcef_dll/ctocpp/cookie_manager_ctocpp.cc
	cef/libcef_dll/ctocpp/cookie_manager_ctocpp.h
	cef/libcef_dll/ctocpp/ctocpp.h
	cef/libcef_dll/ctocpp/dictionary_value_ctocpp.cc
	cef/libcef_dll/ctocpp/dictionary_value_ctocpp.h
	cef/libcef_dll/ctocpp/domdocument_ctocpp.cc
	cef/libcef_dll/ctocpp/domdocument_ctocpp.h
	cef/libcef_dll/ctocpp/domnode_ctocpp.cc
	cef/libcef_dll/ctocpp/domnode_ctocpp.h
	cef/libcef_dll/ctocpp/download_item_callback_ctocpp.cc
	cef/libcef_dll/ctocpp/download_item_callback_ctocpp.h
	cef/libcef_dll/ctocpp/download_item_ctocpp.cc
	cef/libcef_dll/ctocpp/download_item_ctocpp.h
	cef/libcef_dll/ctocpp/drag_data_ctocpp.cc
	cef/libcef_dll/ctocpp/drag_data_ctocpp.h
	cef/libcef_dll/ctocpp/file_dialog_callback_ctocpp.cc
	cef/libcef_dll/ctocpp/file_dialog_callback_ctocpp.h
	cef/libcef_dll/ctocpp/frame_ctocpp.cc
	cef/libcef_dll/ctocpp/frame_ctocpp.h
	cef/libcef_dll/ctocpp/geolocation_callback_ctocpp.cc
	cef/libcef_dll/ctocpp/geolocation_callback_ctocpp.h
	cef/libcef_dll/ctocpp/image_ctocpp.cc
	cef/libcef_dll/ctocpp/image_ctocpp.h
	cef/libcef_dll/ctocpp/jsdialog_callback_ctocpp.cc
	cef/libcef_dll/ctocpp/jsdialog_callback_ctocpp.h
	cef/libcef_dll/ctocpp/list_value_ctocpp.cc
	cef/libcef_dll/ctocpp/list_value_ctocpp.h
	cef/libcef_dll/ctocpp/menu_model_ctocpp.cc
	cef/libcef_dll/ctocpp/menu_model_ctocpp.h
	cef/libcef_dll/ctocpp/navigation_entry_ctocpp.cc
	cef/libcef_dll/ctocpp/navigation_entry_ctocpp.h
	cef/libcef_dll/ctocpp/post_data_ctocpp.cc
	cef/libcef_dll/ctocpp/post_data_ctocpp.h
	cef/libcef_dll/ctocpp/post_data_element_ctocpp.cc
	cef/libcef_dll/ctocpp/post_data_element_ctocpp.h
	cef/libcef_dll/ctocpp/print_dialog_callback_ctocpp.cc
	cef/libcef_dll/ctocpp/print_dialog_callback_ctocpp.h
	cef/libcef_dll/ctocpp/print_job_callback_ctocpp.cc
	cef/libcef_dll/ctocpp/print_job_callback_ctocpp.h
	cef/libcef_dll/ctocpp/print_settings_ctocpp.cc
	cef/libcef_dll/ctocpp/print_settings_ctocpp.h
	cef/libcef_dll/ctocpp/process_message_ctocpp.cc
	cef/libcef_dll/ctocpp/process_message_ctocpp.h
	cef/libcef_dll/ctocpp/request_callback_ctocpp.cc
	cef/libcef_dll/ctocpp/request_callback_ctocpp.h
	cef/libcef_dll/ctocpp/request_context_ctocpp.cc
	cef/libcef_dll/ctocpp/request_context_ctocpp.h
	cef/libcef_dll/ctocpp/request_ctocpp.cc
	cef/libcef_dll/ctocpp/request_ctocpp.h
	cef/libcef_dll/ctocpp/resource_bundle_ctocpp.cc
	cef/libcef_dll/ctocpp/resource_bundle_ctocpp.h
	cef/libcef_dll/ctocpp/response_ctocpp.cc
	cef/libcef_dll/ctocpp/response_ctocpp.h
	cef/libcef_dll/ctocpp/run_context_menu_callback_ctocpp.cc
	cef/libcef_dll/ctocpp/run_context_menu_callback_ctocpp.h
	cef/libcef_dll/ctocpp/scheme_registrar_ctocpp.cc
	cef/libcef_dll/ctocpp/scheme_registrar_ctocpp.h
	cef/libcef_dll/ctocpp/sslcert_principal_ctocpp.cc
	cef/libcef_dll/ctocpp/sslcert_principal_ctocpp.h
	cef/libcef_dll/ctocpp/sslinfo_ctocpp.cc
	cef/libcef_dll/ctocpp/sslinfo_ctocpp.h
	cef/libcef_dll/ctocpp/stream_reader_ctocpp.cc
	cef/libcef_dll/ctocpp/stream_reader_ctocpp.h
	cef/libcef_dll/ctocpp/stream_writer_ctocpp.cc
	cef/libcef_dll/ctocpp/stream_writer_ctocpp.h
	cef/libcef_dll/ctocpp/task_runner_ctocpp.cc
	cef/libcef_dll/ctocpp/task_runner_ctocpp.h
	cef/libcef_dll/ctocpp/urlrequest_ctocpp.cc
	cef/libcef_dll/ctocpp/urlrequest_ctocpp.h
	cef/libcef_dll/ctocpp/v8context_ctocpp.cc
	cef/libcef_dll/ctocpp/v8context_ctocpp.h
	cef/libcef_dll/ctocpp/v8exception_ctocpp.cc
	cef/libcef_dll/ctocpp/v8exception_ctocpp.h
	cef/libcef_dll/ctocpp/v8stack_frame_ctocpp.cc
	cef/libcef_dll/ctocpp/v8stack_frame_ctocpp.h
	cef/libcef_dll/ctocpp/v8stack_trace_ctocpp.cc
	cef/libcef_dll/ctocpp/v8stack_trace_ctocpp.h
	cef/libcef_dll/ctocpp/v8value_ctocpp.cc
	cef/libcef_dll/ctocpp/v8value_ctocpp.h
	cef/libcef_dll/ctocpp/value_ctocpp.cc
	cef/libcef_dll/ctocpp/value_ctocpp.h
	cef/libcef_dll/ctocpp/views/box_layout_ctocpp.cc
	cef/libcef_dll/ctocpp/views/box_layout_ctocpp.h
	cef/libcef_dll/ctocpp/views/browser_view_ctocpp.cc
	cef/libcef_dll/ctocpp/views/browser_view_ctocpp.h
	cef/libcef_dll/ctocpp/views/button_ctocpp.cc
	cef/libcef_dll/ctocpp/views/button_ctocpp.h
	cef/libcef_dll/ctocpp/views/display_ctocpp.cc
	cef/libcef_dll/ctocpp/views/display_ctocpp.h
	cef/libcef_dll/ctocpp/views/fill_layout_ctocpp.cc
	cef/libcef_dll/ctocpp/views/fill_layout_ctocpp.h
	cef/libcef_dll/ctocpp/views/label_button_ctocpp.cc
	cef/libcef_dll/ctocpp/views/label_button_ctocpp.h
	cef/libcef_dll/ctocpp/views/layout_ctocpp.cc
	cef/libcef_dll/ctocpp/views/layout_ctocpp.h
	cef/libcef_dll/ctocpp/views/menu_button_ctocpp.cc
	cef/libcef_dll/ctocpp/views/menu_button_ctocpp.h
	cef/libcef_dll/ctocpp/views/panel_ctocpp.cc
	cef/libcef_dll/ctocpp/views/panel_ctocpp.h
	cef/libcef_dll/ctocpp/views/scroll_view_ctocpp.cc
	cef/libcef_dll/ctocpp/views/scroll_view_ctocpp.h
	cef/libcef_dll/ctocpp/views/textfield_ctocpp.cc
	cef/libcef_dll/ctocpp/views/textfield_ctocpp.h
	cef/libcef_dll/ctocpp/views/view_ctocpp.cc
	cef/libcef_dll/ctocpp/views/view_ctocpp.h
	cef/libcef_dll/ctocpp/views/window_ctocpp.cc
	cef/libcef_dll/ctocpp/views/window_ctocpp.h
	cef/libcef_dll/ctocpp/web_plugin_info_ctocpp.cc
	cef/libcef_dll/ctocpp/web_plugin_info_ctocpp.h
	cef/libcef_dll/ctocpp/xml_reader_ctocpp.cc
	cef/libcef_dll/ctocpp/xml_reader_ctocpp.h
	cef/libcef_dll/ctocpp/zip_reader_ctocpp.cc
	cef/libcef_dll/ctocpp/zip_reader_ctocpp.h
	cef/libcef_dll/transfer_util.cc
	cef/libcef_dll/transfer_util.h
	cef/libcef_dll/wrapper/cef_browser_info_map.h
	cef/libcef_dll/wrapper/cef_byte_read_handler.cc
	cef/libcef_dll/wrapper/cef_closure_task.cc
	cef/libcef_dll/wrapper/cef_message_router.cc
	cef/libcef_dll/wrapper/cef_resource_manager.cc
	cef/libcef_dll/wrapper/cef_stream_resource_handler.cc
	cef/libcef_dll/wrapper/cef_xml_object.cc
	cef/libcef_dll/wrapper/cef_zip_archive.cc
	cef/libcef_dll/wrapper/libcef_dll_wrapper.cc
	cef/libcef_dll/wrapper/libcef_dll_wrapper2.cc
	cef/libcef_dll/wrapper_types.h

	space_armory.c
	ArmoryWrapper.cpp
	simple_app.cpp
	simple_app.h
	simple_handler.cpp
	simple_handler.h
	simple_handler_mac.mm
)

add_definitions(${GL_DEFINITIONS})

add_definitions(-DUSING_CEF_SHARED)
 
blender_add_lib(bf_editor_space_armory "${SRC}" "${INC}" "${INC_SYS}")


macro(AddExternalFramework fwname appname libpath)
	unset(FRAMEWORK_${fwname} CACHE)

    find_library(FRAMEWORK_${fwname}
        NAMES Chromium\ Embedded\ Framework
        PATHS ${libpath} 
        NO_DEFAULT_PATH)
    if( ${FRAMEWORK_${fwname}} STREQUAL FRAMEWORK_${fwname}-NOTFOUND)
        MESSAGE(ERROR ": Framework ${fwname} not found: ${FRAMEWORK_${fwname}}")
    else()
        TARGET_LINK_LIBRARIES(${appname} ${FRAMEWORK_${fwname}})
        MESSAGE(STATUS "Framework ${fwname} found at ${FRAMEWORK_${fwname}}")
    endif()
endmacro(AddExternalFramework)

AddExternalFramework(ChromiumEmbeddedFramework bf_editor_space_armory /Users/lubos/armory/blender-build/blender/source/blender/editors/space_armory/cef/Frameworks)
